[package]
name = "rs2rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
futures = "0.3.15"
hyper = { version = "0.14.10", features = ["server", "http1", "tcp"] }
pin-project-lite = "0.2.7"
thiserror = "1.0.26"
tokio = { version = "1.8.1", features = ["full"] }
tokio-io-timeout = "1.1.1"


# for flamegraph profile
# [profile.release]
# debug = true
